# cplt

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPERS.md  README.md  feedback.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  readme.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: projects.csv  timeplot.csv  timeplot2.csv
demos/: README.md  bar.tape  bar_sim.sh  bubble.tape  bubble_sim.sh  completion.tape  completion_sim.sh  lib.sh  line.tape  line_sim.sh  summarise.tape  summarise_sim.sh  timeline.tape  timeline_sim.sh
docs/: architecture.md  cli.md  index.md
docs/design/: bar.md  bubble.md  hist.md  index.md  line.md  timeline.md
docs/plan/: demo-recordings.md  export-png.md  standardize-demo-gifs.md
plan/: architecture.md  bubble-horizontal.md  combination-matrix.md  features.md  github-issues.md  improvements.md  smarter-summarise.md  ux-testing.md
scripts/: generate_cli_docs.sh  generate_demo.sh  generate_demos.sh  generate_design_review_images.sh  generate_readme_images.sh  render_terminal_png.py  render_terminal_svg.py  run_cli_smoke.sh
src/cplt/: __init__.py  __main__.py  bubble.py  cli.py  compact.py  completions.py  models.py  reader.py  renderer.py  semantic.py  summarise.py  theme.py
src/csvplot/: __init__.py  __main__.py  bubble.py  cli.py  compact.py  completions.py  export.py  models.py  reader.py  renderer.py  summarise.py
tests/: conftest.py  test_bubble.py  test_cli.py  test_compact.py  test_completions.py  test_completions_where.py  test_export.py  test_export_integration.py  test_filter.py  test_models.py  test_reader.py  test_renderer.py  test_semantic.py  test_summarise.py  test_theme.py
tests/ux/: conftest.py  test_bar_combinations.py  test_bubble_combinations.py  test_error_ux.py  test_format_matrix.py  test_hist_combinations.py  test_line_combinations.py  test_options_ux.py  test_scale_ux.py  test_summarise_combinations.py  test_timeline_combinations.py
tmp/testdata/: bad_dates.csv  date_formats.csv  edge.csv  high_card.csv  large.csv  minimal.csv  quoted.csv
