[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvplot"
version = "0.1.0"
description = "Plot timeline/Gantt-style ranges from CSV files in the terminal"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "plotext>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
csvplot = "csvplot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/csvplot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
